containerise application by using layers and a builder